--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 
 html {
-background: url(../images/background.jpeg) no-repeat center center fixed;
+/*background: url(../images/background.jpeg) no-repeat center center fixed;*/
+  background-color: whitesmoke;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,7 +10,7 @@ background: url(../images/background.jpeg) no-repeat center center fixed;
 }
 .prof-box {
   width:500px;
-  height: 500px;
+  height: 600px;
   background: rgba(0, 0, 0, 0.2);
   padding: 20px;
   margin: 0 auto;
